--- a/public/header.css
+++ b/public/header.css
@@ -3,6 +3,7 @@ header {
     justify-content: space-between;
     height: 100px;
     background-color: var(--primary-color);
+    gap: 1.2em;
 
     a {
         height: 100%;
@@ -38,23 +39,31 @@ header {
         display: none;
         padding-right: 2em;
         justify-content: space-between;
-        gap: 3em;
-        width: 100%;
+        gap: 2em;
+        flex-grow: 1;
         
-
         ul {
             display: flex;
-            justify-content: center;
             align-items: center;
             list-style-type: none;
         }
 
         .navigation-links {
-            gap: 1.6em; 
+            justify-content: space-between;
+            flex-grow: 1;
+
+            @media (min-width: 1100px) {
+                padding-inline: 5em;
+            }
+
+            @media (min-width: 1300px) {
+                padding-inline: 6.5em;
+            }
         }
 
         .language-switcher {
             gap: 1em;
+            justify-content: center;
         
             img {
                 width: 20px;
