--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -30,6 +30,6 @@ h2 {
 a {
     color: white;
     text-decoration: none;
-    font-size: 1.3rem;
+    font-size: clamp(1.3rem, 1.3vw + 0.5rem, 1.6rem);
     font-weight: 600;
 }
