--- a/views/index.liquid
+++ b/views/index.liquid
@@ -1,5 +1,7 @@
 {% render 'partials/head.liquid' %}
+{% render 'partials/startscreen.liquid' %}
 
-<h1>hello world</h1>
+<main>
 
+</main>
 {% render 'partials/foot.liquid' %}
