--- a/views/partials/header.liquid
+++ b/views/partials/header.liquid
@@ -1,7 +1,7 @@
 <header>
-    <a href="/"><img src="/img/logo.png" alt="Stensgaard Farming"></a>
+    <a href="/"><img src="/img/logo.png" alt="Stensgaard Farming" width="100" height="100"></a>
 
-    <button class="hamburger-button">
+    <button>
         <span></span>
         <span></span>
         <span></span>
