--- a/public/header.css
+++ b/public/header.css
@@ -52,6 +52,10 @@ header {
             justify-content: space-between;
             flex-grow: 1;
 
+            a {
+                font-size: clamp(1.3rem, 1.3vw + 0.5rem, 1.6rem);
+            }
+
             @media (min-width: 1100px) {
                 padding-inline: 5em;
             }
