--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -11,7 +11,7 @@
 
     /* headings */  
     --heading-color: #ffffff;
-    --heading-font-size: 2rem;
+    --heading-font-size: clamp(2.2rem, 2vw + 1rem, 7rem);
     --heading-line-height: 1.2;
 }
 
@@ -30,6 +30,5 @@ h2 {
 a {
     color: white;
     text-decoration: none;
-    font-size: clamp(1.3rem, 1.3vw + 0.5rem, 1.6rem);
     font-weight: 600;
 }
