--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -1,3 +1,18 @@
+@font-face {
+    font-family: 'Poppins';
+    src: url('/font/Poppins-Regular.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('/font/Poppins-SemiBold.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('/font/Poppins-Bold.ttf') format('truetype');
+}
+
 :root {
     /* colors */
     --background-color: #f0f0f0;
@@ -7,11 +22,11 @@
 
     /* fonts */
     --font-size: 16px;
-    --font-family: 'Arial', sans-serif; 
+    --font-family: 'Poppins', sans-serif; 
 
     /* headings */  
     --heading-color: #ffffff;
-    --heading-font-size: clamp(2.2rem, 2vw + 1rem, 7rem);
+    --heading-font-size: clamp(2.1rem, 2vw + 1rem, 7rem);
     --heading-line-height: 1.2;
 }
 
@@ -30,5 +45,5 @@ h2 {
 a {
     color: white;
     text-decoration: none;
-    font-weight: 600;
+    font-weight: 500;
 }
