--- a/views/index.liquid
+++ b/views/index.liquid
@@ -1,7 +1,7 @@
 {% render 'partials/head.liquid' %}
 {% render 'partials/startscreen.liquid' %}
-
 <main>
+    {% render 'partials/about-us.liquid' %}
 
 </main>
 {% render 'partials/foot.liquid' %}
