--- a/public/startscreen.css
+++ b/public/startscreen.css
@@ -1,16 +1,17 @@
 .startscreen {
-    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('/img/farm.jpg');
+    background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('/img/farm.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     height: calc(45vh - 100px); 
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
 
     div {
         padding-top: 4vh;
+        margin-inline: 1em;
 
         h1 {
             margin-bottom: 0.2em;
@@ -37,15 +38,11 @@
 
             strong {
                 color: var(--secondary-color);
-                text-shadow:
-                    -1px -1px 0 white,
-                     1px -1px 0 white,
-                    -1px  1px 0 white,
-                     1px  1px 0 white;
             }
 
             @media (min-width: 768px) {
                 margin-top: 0;
+                margin-bottom: 1.2em;
             }     
         }
 
@@ -76,6 +73,9 @@
     }
 
     @media (min-width: 1200px) {
+        height: calc(80vh - 100px);
+    }
+    @media (min-width: 1300px) {
         height: calc(100vh - 100px);
     }
 }
