--- a/css/startscreen.css
+++ b/css/startscreen.css
@@ -1,5 +1,5 @@
 .startscreen {
-    background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('/img/farm.jpg');
+    background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('../img/farm.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
