--- a/css/about-us.css
+++ b/css/about-us.css
@@ -1,3 +1,48 @@
 .about-us {
-    max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    padding-top: 2em;
+    gap: 1em;
+    margin-inline: auto;
+
+    h2 {
+        margin: 0;
+    }
+
+    article {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 1em;
+
+        p {
+            margin: 0;
+        }
+
+        img {
+            width: 100%;
+            height: auto;
+
+            @media (min-width: 900px) {
+                
+                
+            }
+        }
+
+        @media (min-width: 680px) {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+        }
+        @media (min-width: 900px) {
+            gap: 2em;
+        }
+        @media (min-width: 1024px) {
+            gap: 3em;
+        }
+    }
+
+
+    @media (min-width: 1024px) {
+        margin-inline: 10%;
+    }
 }
