--- a/css/products.css
+++ b/css/products.css
@@ -13,7 +13,7 @@
         display: flex;
         flex-wrap: wrap;
         align-items: center;
-        justify-content: center;
+        
         gap: 1em;
         padding: 0;
         margin: 0;
@@ -23,7 +23,7 @@
             align-items: center;
             justify-content: center;
             width: 100%;
-            height: 200px;
+            height: 220px;
             border-radius: 8px;
             background-repeat: no-repeat;
             background-position: center;
@@ -34,19 +34,22 @@
                 text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
             }
 
-            @media (min-width: 425px) {
-                max-width: 350px;
+            @media (min-width: 600px) {
+                width: calc(50% - 1em);
+            }
+            @media (min-width: 900px) {
+                width: calc(33.33% - 1em);
             }
         }
 
         li:nth-of-type(1) {
-            background-image: url('../img/cows.jpg');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6)), url('../img/cows.jpg');
         }
         li:nth-of-type(2) {
-            background-image: url('../img/potatoes.jpg');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6)), url('../img/potatoes.jpg');
         }
         li:nth-of-type(3) {
-            background-image: url('../img/peonies.png');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6)), url('../img/peonies.png');
         }
 
         @media (min-width: 1385px) {
