--- a/css/products.css
+++ b/css/products.css
@@ -19,9 +19,6 @@
         margin: 0;
 
         li {
-            display: flex;
-            align-items: center;
-            justify-content: center;
             width: 100%;
             height: 220px;
             border-radius: 8px;
@@ -29,9 +26,17 @@
             background-position: center;
             background-size: cover;
 
-            h3 {
-                color: white;
-                text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+            a {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 100%;
+                height: 100%;
+
+                h3 {
+                    color: white;
+                    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+                }
             }
 
             @media (min-width: 600px) {
