--- a/css/about-us.css
+++ b/css/about-us.css
@@ -19,14 +19,37 @@
             margin: 0;
         }
 
-        img {
+        .slideshow {
+            position: relative;
             width: 100%;
             height: auto;
-
-            @media (min-width: 900px) {
-                
-                
+            aspect-ratio: 16 / 9;
+            overflow: hidden;
+        
+            img {
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+              opacity: 0;
+              animation: slideshow 16s infinite;
+              object-fit: cover;
+              object-position: center;
             }
+        }
+
+        img:nth-child(1) {
+            animation-delay: 0s;
+        }
+        img:nth-child(2) {
+            animation-delay: 4s;
+        }
+        img:nth-child(3) {
+            animation-delay: 8s;
+        }
+        img:nth-child(4) {
+            animation-delay: 12s;
         }
 
         @media (min-width: 680px) {
@@ -45,4 +68,12 @@
     @media (min-width: 1024px) {
         margin-inline: 10%;
     }
+}
+
+@keyframes slideshow {
+    0% { opacity: 0; }
+    5% { opacity: 1; }
+    30% { opacity: 1; }
+    35% { opacity: 0; }
+    100% { opacity: 0; }
 }
