--- a/css/header.css
+++ b/css/header.css
@@ -23,6 +23,8 @@ header {
         background: none;
         border: none;
         margin-right: 2.3em;
+        margin-top: 2.3em;
+        height: max-content;
 
         span {
             background-color: white;
@@ -52,7 +54,24 @@ header {
             flex-grow: 1;
 
             a {
+                position: relative;
+                display: inline-block;
                 font-size: clamp(1.3rem, 1.3vw + 0.5rem, 1.6rem);
+
+                &::after {
+                    content: "";
+                    position: absolute;
+                    left: 0;
+                    bottom: 0;
+                    height: 2px;
+                    width: 0%;
+                    background-color: currentColor;
+                    transition: width 0.3s ease;
+                }
+
+                &:hover::after {
+                    width: 100%;
+                }
             }
 
             @media (min-width: 1100px) {
