changes in responsiveness

--- a/css/startscreen.css
+++ b/css/startscreen.css
@@ -3,31 +3,23 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: calc(45vh - 100px); 
+    height: calc(380px - 100px); 
+    min-height: 280px;
     width: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
 
     div {
-        padding-top: 4vh;
         margin-inline: 1em;
 
         h1 {
-            margin-bottom: 0.2em;
+            margin: 0;
+            font-size: clamp(2rem, 2.5vw + 1.5rem, 20rem);
 
-            @media (min-width: 768px) {
-                font-size: 4rem;
-                margin-bottom: 0.1em;
-            }
-            @media (min-width: 1000px) {
-                font-size: 5rem;
-            }
-            @media (min-width: 1200px) {
-                font-size: 6rem;
-            }
-            @media (min-width: 1400px) {
-                font-size: 7rem;
+            @media (min-width: 2200px) {
+                font-size: 11rem; 
             }
         }
 
@@ -61,15 +53,15 @@
     }
 
     @media (min-width: 768px) {
-        height: calc(60vh - 100px);
+        height: calc(40vh - 100px);
     }
 
     @media (min-width: 1000px) {
-        height: calc(70vh - 100px);
+        height: calc(50vh - 100px);
     }
 
     @media (min-width: 1200px) {
-        height: calc(80vh - 100px);
+        height: calc(60vh - 100px);
     }
     @media (min-width: 1300px) {
         height: calc(100vh - 100px);
