--- a/css/header.css
+++ b/css/header.css
@@ -52,6 +52,8 @@ header {
         .navigation-links {
             justify-content: space-between;
             flex-grow: 1;
+            max-width: 1900px;
+            margin-inline: auto;
 
             a {
                 position: relative;
