--- a/css/startscreen.css
+++ b/css/startscreen.css
@@ -18,6 +18,10 @@
             margin: 0;
             font-size: clamp(2rem, 2.5vw + 1.5rem, 20rem);
 
+            @media (min-width: 1300px) {
+                font-size: 7rem;
+            }
+
             @media (min-width: 2200px) {
                 font-size: 11rem; 
             }
