--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,16 +1,25 @@
 @font-face {
-    font-family: 'Poppins';
-    src: url('./font/Poppins-Regular.ttf') format('truetype');
+  font-family: 'Poppins';
+  src: url('./font/Poppins-Regular.woff2') format('woff2'),
+       url('./font/Poppins-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'Poppins';
-    src: url('./font/Poppins-SemiBold.ttf') format('truetype');
+  font-family: 'Poppins';
+  src: url('./font/Poppins-SemiBold.woff2') format('woff2'),
+       url('./font/Poppins-SemiBold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'Poppins';
-    src: url('./font/Poppins-Bold.ttf');
+  font-family: 'Poppins';
+  src: url('./font/Poppins-Bold.woff2') format('woff2'),
+       url('./font/Poppins-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
 }
 
 :root {
