--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,6 +2,7 @@
   font-family: 'Poppins';
   src: url('../font/Poppins-Regular.woff2') format('woff2'),
        url('../font/Poppins-Regular.ttf') format('truetype');
+  font-display: swap;
   font-weight: 400;
   font-style: normal;
 }
@@ -10,6 +11,7 @@
   font-family: 'Poppins';
   src: url('../font/Poppins-SemiBold.woff2') format('woff2'),
        url('../font/Poppins-SemiBold.ttf') format('truetype');
+  font-display: swap;
   font-weight: 600;
   font-style: normal;
 }
@@ -18,6 +20,7 @@
   font-family: 'Poppins';
   src: url('../font/Poppins-Bold.woff2') format('woff2'),
        url('../font/Poppins-Bold.ttf') format('truetype');
+  font-display: swap;
   font-weight: 700;
   font-style: normal;
 }
@@ -58,7 +61,7 @@ h3 {
 a {
     color: white;
     text-decoration: none;
-    font-weight: 500;
+    font-weight: 600;
 }
 
 ul {
