--- a/css/foot.css
+++ b/css/foot.css
@@ -5,23 +5,25 @@ footer {
     background-color: var(--primary-color);
     color: white;
 
-    section {
+    .footer-wrapper {
         margin-inline: 1em;
 
-        ul {
-            padding: 0;   
+        section {
 
-            li {
-                padding-top: 0.1em;
+            h2 {
+                margin-block-end: 0;
+            }
 
-                h3 {
-                    margin-block: 0.4em;
-                    font-weight: 600;
-                }
+            ul {
+                padding: 0;   
 
-                a {
-                    text-decoration: underline;
-                    font-weight: 400;
+                li {
+                    padding-top: 0.1em;
+
+                    a {
+                        text-decoration: underline;
+                        font-weight: 400;
+                    }
                 }
             }
         }
@@ -31,6 +33,10 @@ footer {
             flex-wrap: wrap;
             justify-content: space-between;
             column-gap: 1.5em;
+        }
+
+        @media (min-width: 480px) {
+            margin-inline: 2em;
         }
 
         @media (min-width: 768px) {
@@ -48,3 +54,14 @@ footer {
         align-items: center;
     }
 }
+
+
+
+
+
+
+
+
+
+
+
