--- a/css/products.css
+++ b/css/products.css
@@ -32,11 +32,8 @@
                 justify-content: center;
                 width: 100%;
                 height: 100%;
-
-                h3 {
-                    color: white;
-                    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-                }
+                font-size: calc(var(--heading-font-size) * 0.9);
+                text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
             }
 
             @media (min-width: 600px) {
