--- a/css/header.css
+++ b/css/header.css
@@ -8,7 +8,7 @@ header {
     a {
         height: 100%;
     
-        img {
+        picture {
             width: 100px;
             height: 100px;
         }
