--- a/css/foot.css
+++ b/css/foot.css
@@ -42,6 +42,9 @@ footer {
         @media (min-width: 768px) {
             width: 80%;
         }    
+        @media (min-width: 1720px) {
+            width: 60%;
+        }
     }
 
     p {
