--- a/css/products.css
+++ b/css/products.css
@@ -42,6 +42,12 @@
             @media (min-width: 900px) {
                 width: calc(33.33% - 1em);
             }
+
+            &:hover {
+                filter: brightness(1.2);
+                transition: filter 0.3s ease-in-out;
+                transform: scale(1.04);
+            }
         }
 
         li:nth-of-type(1) {
