respsonive images voor meeste gedeelte nu

--- a/css/startscreen.css
+++ b/css/startscreen.css
@@ -1,9 +1,9 @@
 .startscreen {
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
         image-set(
-            url('../img/farm.avif') type('image/avif'),
-            url('../img/farm.webp') type('image/webp'),
-            url('../img/farm.jpg') type('image/jpg')
+            url('../img/avif/farm.avif') type('image/avif'),
+            url('../img/webp/farm.webp') type('image/webp'),
+            url('../img/jpg/farm.jpg') type('image/jpg')
         );
     background-repeat: no-repeat;
     background-size: cover;
