--- a/css/about-us.css
+++ b/css/about-us.css
@@ -26,32 +26,37 @@
             aspect-ratio: 16 / 9;
             overflow: hidden;
         
-            img {
-              position: absolute;
-              top: 0;
-              left: 0;
-              width: 100%;
-              height: 100%;
-              opacity: 0;
-              animation: slideshow 16s infinite;
-              object-fit: cover;
-              object-position: center;
+            picture {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+            
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    object-position: center;
+                    opacity: 0;
+                    animation: slideshow 16s infinite;
+                }
+            }
+
+            picture:nth-child(1) img {
+                animation-delay: 0s;
+            }
+            picture:nth-child(2) img {
+                animation-delay: 4s;
+            }
+            picture:nth-child(3) img {
+                animation-delay: 8s;
+            }
+            picture:nth-child(4) img {
+                animation-delay: 12s;
             }
         }
-
-        img:nth-child(1) {
-            animation-delay: 0s;
-        }
-        img:nth-child(2) {
-            animation-delay: 4s;
-        }
-        img:nth-child(3) {
-            animation-delay: 8s;
-        }
-        img:nth-child(4) {
-            animation-delay: 12s;
-        }
-
+        
         @media (min-width: 680px) {
             display: grid;
             grid-template-columns: 1fr 1fr;
