--- a/css/products.css
+++ b/css/products.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     gap: 1em;
-    padding-block: 4em;
+    padding: 4rem 0 2rem 0;
 
     h2, p {
         margin: 0;
@@ -13,6 +13,7 @@
         display: flex;
         flex-wrap: wrap;
         align-items: center;
+        justify-content: space-between;
         
         gap: 1em;
         padding: 0;
