--- a/css/products.css
+++ b/css/products.css
@@ -52,13 +52,13 @@
         }
 
         li:nth-of-type(1) {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6)), url('../img/cows.avif');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6)), url('../img/avif/cows.avif');
         }
         li:nth-of-type(2) {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6)), url('../img/potatoes.avif');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6)), url('../img/avif/potatoes.avif');
         }
         li:nth-of-type(3) {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6)), url('../img/peonies.png');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6)), url('../img/avif/peonies.avif');
         }
 
         @media (min-width: 1385px) {
